--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,8 +5,8 @@ $dropDown-shadow: 0 10px 40px 10px rgba(140,152,164,.175);
 $border: .0625rem solid rgba(231,234,243,.7);
 $radius: .75rem;
 
-// Typography
-$font-family: 'Poppins', 'Montserrat', sans-serif;
+// Typography, 'Poppins', 'Montserrat', 
+$font-family: 'Segoe UI', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
