--- a/resources/sass/_dashboard.scss
+++ b/resources/sass/_dashboard.scss
@@ -9,6 +9,7 @@
         .card-name{
             color: $default;
             font-weight: 500;
+            font-size: .9em;
         }
 
         .reports-card{
@@ -33,7 +34,7 @@
                     .card-total{
                         color: $toolbar;
                         font-weight: 500;
-                        font-size: 1.2em;
+                        font-size: 1.5em;
                         font-style: uppercase;
                     }
 
