--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -6,7 +6,7 @@ $border: .0625rem solid rgba(231,234,243,.7);
 $radius: .75rem;
 
 // Typography, 'Poppins', 'Montserrat', 
-$font-family: 'Segoe UI', sans-serif;
+$font-family: 'Poppins', 'Montserrat', 'Segoe UI', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
