--- a/resources/sass/_modal.scss
+++ b/resources/sass/_modal.scss
@@ -43,8 +43,7 @@
 				width: 50px;
 				border-radius: 50%;
 				padding: 10px;
-				background-color: #EA203411;
-				color: $red;
+				
 
 				.feather{
 					width: 24px;
@@ -52,14 +51,19 @@
 				}
 			}
 
+			.modal-icon-warning{
+				background-color: #ffc10711;
+				color: #ffc107;
+			}
+
 			.modal-icon-error{
-				background-color: pink;
+				background-color: #EA203411;
 				color: $red;
 			}
 
 			.modal-icon-info{
 				color: $btn-primary;
-				background-color: #0e76bd33;
+				background-color: #0e76bd11;
 			}
 
 			.modal-body{
