--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,7 @@
 $body-bg: #fff; // #f8fafc;
 
 $shadow: 0 6px 12px rgba(140,152,164,.075);
+$shadow-sm: 1px 3px 5px rgba(0,0,0,0.05);
 $dropDown-shadow: 0 10px 40px 10px rgba(140,152,164,.175);
 $border: .0625rem solid rgba(231,234,243,.7);
 $radius: .75rem;
