--- a/resources/sass/_content.scss
+++ b/resources/sass/_content.scss
@@ -1,150 +1,146 @@
-.content{
-    background-color: #fff;
+#myGrid{
     overflow: hidden;
+    max-width: 100%;
+    height: 100vh;
+    border-radius: $radius;
+    border: $border;
+}
 
-    #myGrid{
-        overflow: hidden;
-        width: 100%;
-        height: 100vh;
-        border-radius: $radius;
+.data-profile{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    .profile{
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        border: 2px solid #eee;
     }
-    
-    .data-profile{
+
+    .account{
         display: flex;
-        justify-content: flex-start;
-        align-items: center;
+        flex-direction: column;
+        margin-left: 5px;
+    }
+}
 
-        .profile{
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            border: 2px solid #eee;
-        }
+.btn-edit,
+.btn-remove{
+    width: 34px;
+    height: 34px;
+    border-radius: 5px;
+    color: #fff;
+    padding: 0;
+}
 
-        .account{
-            display: flex;
-            flex-direction: column;
-            margin-left: 5px;
-        }
+.btn-edit{
+    background-color: $btn-primary;
+}
+
+.btn-remove{
+    background-color: $btn-remove;
+}
+
+.card-form{
+    padding: 20px;
+    background-color: #fff;
+    border: $border;
+    box-shadow: $shadow;
+    border-radius: $radius;
+    overflow: hidden;
+    text-align: left;
+
+    h5{
+        font-weight: 500;
+        color: $toolbar;
+        margin-bottom: 20px;
     }
 
-    .btn-edit,
-    .btn-remove{
-        width: 34px;
-        height: 34px;
-        border-radius: 5px;
-        color: #fff;
-        padding: 0;
-    }
-
-    .btn-edit{
-        background-color: $btn-primary;
-    }
-
-    .btn-remove{
-        background-color: $btn-remove;
-    }
-
-    .card-form{
-        padding: 20px;
-        background-color: #fff;
-        border: $border;
-        box-shadow: $shadow;
-        border-radius: $radius;
-        overflow: hidden;
+    .input-group{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 20px;
         text-align: left;
 
-        h5{
+        label{
+            font-size: .8em;
+            color: #aaa;
             font-weight: 500;
-            color: $toolbar;
-            margin-bottom: 20px;
+            margin-bottom: 3px;
         }
 
-        .input-group{
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 20px;
-            text-align: left;
+        .form-control{
+            font-weight: 500;
+            font-size: .9em;
+            border-radius: 4px;
+            transition: all 0.3s ease;
+            resize: none;
+            width: 100% !important;
+            border-color: #d2d6dc !important;
 
-            label{
+            &:focus{
+                border: 1px solid $btn-primary;
+                box-shadow: $shadow-sm;
+            }
+        }
+
+        .form-control-color{
+            outline: none;
+            width: 100%;
+            overflow: hidden;
+            height: 30px;
+            border-radius: 4px;
+            border: none;
+            background-color: #fcfcfc;
+            padding: 5px;
+            border: 1px solid #d2d6dc;
+
+            &:focus{
+                border: 1px solid $btn-primary;
+                background-color: #fff;
+                box-shadow: $shadow;
+            }
+        }
+
+        .invalid-feedback{
+            strong{
+                color: $red;
+                font-size: inherit;
+                font-weight: 500;
+            }
+        }
+
+        .messages{
+            strong{
+                color: $red;
                 font-size: .8em;
-                color: #aaa;
                 font-weight: 500;
-                margin-bottom: 3px;
             }
+        }
+    }
 
-            .form-control{
-                font-weight: 500;
-                font-size: .9em;
-                border-radius: 4px;
-                transition: all 0.3s ease;
-                resize: none;
-                width: 100% !important;
-                border-color: #d2d6dc !important;
+    .actions{
+        margin-top: 15px;
+        text-align: right;
 
-                &:focus{
-                    border: 1px solid $btn-primary;
-                    box-shadow: $shadow-sm;
-                }
-            }
+        button{
+            margin-right: 5px;
+            border-radius: 5px;
+            font-family: $font-family;
+            font-size: .9em;
+            font-weight: 500;
+            transition: all 0.4s ease;
+            color: #fff;
+            padding: 8px 15px;
 
-            .form-control-color{
-                outline: none;
-                width: 100%;
-                overflow: hidden;
-                height: 30px;
-                border-radius: 4px;
-                border: none;
-                background-color: #fcfcfc;
-                padding: 5px;
-                border: 1px solid #d2d6dc;
-
-                &:focus{
-                    border: 1px solid $btn-primary;
-                    background-color: #fff;
-                    box-shadow: $shadow;
-                }
-            }
-
-            .invalid-feedback{
-                strong{
-                    color: $red;
-                    font-size: inherit;
-                    font-weight: 500;
-                }
-            }
-
-            .messages{
-                strong{
-                    color: $red;
-                    font-size: .8em;
-                    font-weight: 500;
-                }
+            &:last-child{
+                margin-right: 0;
             }
         }
 
-        .actions{
-            margin-top: 15px;
-            text-align: right;
-
-            button{
-                margin-right: 5px;
-                border-radius: 5px;
-                font-family: $font-family;
-                font-size: .9em;
-                font-weight: 500;
-                transition: all 0.4s ease;
-                color: #fff;
-                padding: 8px 15px;
-
-                &:last-child{
-                    margin-right: 0;
-                }
-            }
-
-            .btn-submit{
-                background-color: $btn-primary;
-            }
+        .btn-submit{
+            background-color: $btn-primary;
         }
     }
 }
