--- a/resources/sass/_modal.scss
+++ b/resources/sass/_modal.scss
@@ -41,6 +41,7 @@
 				align-items: center;
 				justify-content: center;
 				width: 50px;
+				height: 50px;
 				border-radius: 50%;
 				padding: 10px;
 				
@@ -62,8 +63,8 @@
 			}
 
 			.modal-icon-info{
-				color: $btn-primary;
-				background-color: #0e76bd11;
+				color: #138496;
+				background-color: #13849611;
 			}
 
 			.modal-body{
