--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -6,8 +6,7 @@ $dropDown-shadow: 0 10px 40px 10px rgba(140,152,164,.175);
 $border: .0625rem solid rgba(231,234,243,.7);
 $radius: .75rem;
 
-// Typography, 'Poppins', 'Montserrat', 
-$font-family: 'Poppins', 'Montserrat', 'Segoe UI', sans-serif;
+$font-family: 'Roboto', 'Poppins', 'Montserrat', 'Segoe UI', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
