--- a/resources/sass/_sidebar.scss
+++ b/resources/sass/_sidebar.scss
@@ -50,6 +50,11 @@
                 align-items: center;
                 background-color: #fff;
 
+                .feather{
+                    width: 18px;
+                    height: 18px;
+                }
+
                 .awesome2{
                     font-size: .5em !important;
                 }
