--- a/public/css/app.css
+++ b/public/css/app.css
@@ -72,7 +72,7 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color: #eee;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -511,7 +511,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #fff;
+  background-color: #eee;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -4240,15 +4240,15 @@ input[type=button].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(248, 248, 248, 0.25);
+  box-shadow: 0 0 0 1px #eee, 0 0 0 0.2rem rgba(248, 248, 248, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(248, 248, 248, 0.25);
+  box-shadow: 0 0 0 1px #eee, 0 0 0 0.2rem rgba(248, 248, 248, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(248, 248, 248, 0.25);
+  box-shadow: 0 0 0 1px #eee, 0 0 0 0.2rem rgba(248, 248, 248, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4454,8 +4454,8 @@ input[type=button].btn-block {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #fff;
-  border-color: #dee2e6 #dee2e6 #fff;
+  background-color: #eee;
+  border-color: #dee2e6 #dee2e6 #eee;
 }
 
 .nav-tabs .dropdown-menu {
@@ -10942,7 +10942,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", "Poppins", "Montserrat", "Segoe UI", sans-serif;
+  font-family: "Poppins", "Montserrat", "Roboto", "Segoe UI", sans-serif;
   font-size: 90% !important;
   font-weight: 500 !important;
 }
@@ -10963,19 +10963,8 @@ body .is-below-minimum {
   color: #feb019;
 }
 
-body .auth-container {
-  /* ----------- Phone Galaxy ----------- */
-  /* ----------- Ends Here ----------- */
-  /* ----------- Phone Pixel ----------- */
-  /* ----------- Ends Here ----------- */
-  /* ----------- iPhone 6/7/8 ----------- */
-  /* ----------- Ends Here ----------- */
-  /* ----------- iPad ----------- */
-  /* ----------- Ends Here ----------- */
-}
-
 body .auth-container .auth-content {
-  background-color: #f3f3f3;
+  background-color: #eee;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10987,56 +10976,23 @@ body .auth-container .auth-content {
 }
 
 body .auth-container .auth-content .auth-card {
-  display: flex;
-  justify-content: space-around;
-  background-color: #fff !important;
   border: 0.0625rem solid rgba(231, 234, 243, 0.7);
   box-shadow: 0 6px 12px rgba(140, 152, 164, 0.075);
   border-radius: 0.75rem;
   overflow: hidden;
   position: relative;
+  background-color: #fff !important;
   width: 55%;
 }
 
-body .auth-container .auth-content .auth-card .logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
-  background-color: #fdfdfd;
-  flex: 1;
-  overflow: hidden;
-}
-
-body .auth-container .auth-content .auth-card .logo img {
-  width: 100%;
-  height: auto;
-}
-
-body .auth-container .auth-content .auth-card .logo-banner {
-  justify-content: center;
-  align-items: center;
-  display: none;
-  padding: 30px;
-  padding-bottom: 0px;
-  overflow: hidden;
-}
-
-body .auth-container .auth-content .auth-card .logo-banner img {
-  width: 120px;
-  height: auto;
-}
-
 body .auth-container .auth-content .auth-card .body-card {
-  background-color: #fff;
+  flex: 1;
   display: flex;
   flex-direction: column;
-  flex: 1;
-  padding: 30px;
+  background-color: #fff;
 }
 
 body .auth-container .auth-content .auth-card .body-card h5 {
-  color: #3e4044;
   font-weight: 500;
   margin-bottom: 15px;
 }
@@ -11061,9 +11017,8 @@ body .auth-container .auth-content .auth-card .body-card .form-group {
 
 body .auth-container .auth-content .auth-card .body-card .form-group label {
   margin-bottom: 5px;
-  font-size: 0.8em;
+  font-size: 0.9em;
   font-weight: 500;
-  color: #999;
 }
 
 body .auth-container .auth-content .auth-card .body-card .form-group .input-group-single {
@@ -11096,7 +11051,7 @@ body .auth-container .auth-content .auth-card .body-card .form-group .input-grou
 body .auth-container .auth-content .auth-card .body-card .form-group .input-group-single:focus-within {
   border: 1px solid #0e76bd;
   background-color: #fff;
-  box-shadow: 0 6px 12px rgba(140, 152, 164, 0.075);
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.05);
 }
 
 body .auth-container .auth-content .auth-card .body-card .form-group .invalid-feedback {
@@ -11114,10 +11069,29 @@ body .auth-container .auth-content .auth-card .body-card .form-group input:inval
   box-shadow: 0 0 3px transparent;
 }
 
+body .auth-container .auth-content .auth-card .body-card .form-group .form-check label {
+  font-size: 1em;
+  position: relative;
+  top: 1.5px;
+  font-weight: 500;
+}
+
+body .auth-container .auth-content .auth-card .body-card .form-group .two-cols {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+body .auth-container .auth-content .auth-card .body-card .form-group .two-cols .btn-go-back {
+  color: #0e76bd;
+  font-family: "Poppins", "Montserrat", "Roboto", "Segoe UI", sans-serif;
+  font-size: 0.9em;
+  font-weight: 500;
+}
+
 body .auth-container .auth-content .auth-card .body-card .form-group .btn-auth {
-  margin-right: 5px;
   border-radius: 5px;
-  font-family: "Roboto", "Poppins", "Montserrat", "Segoe UI", sans-serif;
+  font-family: "Poppins", "Montserrat", "Roboto", "Segoe UI", sans-serif;
   font-size: 0.9em;
   font-weight: 500;
   padding: 8px;
@@ -11130,214 +11104,17 @@ body .auth-container .auth-content .auth-card .body-card .form-group .btn-auth:l
   margin-right: 0;
 }
 
-body .auth-container .auth-content .auth-card .body-card .form-group .form-check label {
-  font-size: 0.9em;
-  color: #999;
-  position: relative;
-  top: 1.5px;
-}
-
-body .auth-container .auth-content .auth-card .body-card .form-group .forgot a {
+body .auth-container .auth-content .auth-card .body-card .forgot a {
   font-size: 0.9em;
   color: #0e76bd;
   outline: none;
-}
-
-body .auth-container .auth-content .auth-card .body-card .form-group .two-cols {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-body .auth-container .auth-content .auth-card .body-card .form-group .two-cols .btn-go-back {
-  color: #0e76bd;
-  font-family: "Roboto", "Poppins", "Montserrat", "Segoe UI", sans-serif;
-  font-size: 0.9em;
   font-weight: 500;
-}
-
-@media only screen and (max-width: 360px) and (max-height: 640px) and (orientation: portrait) {
-  body .auth-container .auth-card {
-    width: 100% !important;
-    height: 100vh;
-    flex-direction: column;
-    border-radius: 0px !important;
-  }
-
-  body .auth-container .auth-card .logo {
-    display: none !important;
-  }
-
-  body .auth-container .auth-card .logo-banner {
-    display: flex !important;
-  }
-}
-
-@media only screen and (max-width: 640px) and (max-height: 360px) and (orientation: landscape) {
-  body .auth-container .auth-card {
-    width: 100% !important;
-    height: 100vh;
-    border-radius: 0px !important;
-  }
-}
-
-@media only screen and (max-width: 411px) and (max-height: 731px) and (orientation: portrait) {
-  body .auth-container .auth-card {
-    width: 100% !important;
-    height: 100vh;
-    flex-direction: column;
-    border-radius: 0px !important;
-  }
-
-  body .auth-container .auth-card .logo {
-    display: none !important;
-  }
-
-  body .auth-container .auth-card .logo-banner {
-    display: flex !important;
-  }
-}
-
-@media only screen and (max-width: 731px) and (max-height: 411px) and (orientation: landscape) {
-  body .auth-container .auth-card {
-    width: 100% !important;
-    height: 100vh;
-    flex-direction: column;
-    border-radius: 0px !important;
-  }
-
-  body .auth-container .auth-card .logo {
-    display: none !important;
-  }
-
-  body .auth-container .auth-card .logo-banner {
-    display: flex !important;
-  }
-}
-
-@media only screen and (max-width: 411px) and (max-height: 823px) and (orientation: portrait) {
-  body .auth-container .auth-card {
-    width: 100% !important;
-    height: 100vh;
-    flex-direction: column;
-    border-radius: 0px !important;
-  }
-
-  body .auth-container .auth-card .logo {
-    display: none !important;
-  }
-
-  body .auth-container .auth-card .logo-banner {
-    display: flex !important;
-  }
-}
-
-@media only screen and (max-width: 823px) and (max-height: 411px) and (orientation: landscape) {
-  body .auth-container .auth-card {
-    width: 100% !important;
-    height: 100vh;
-    flex-direction: column;
-    border-radius: 0px !important;
-  }
-
-  body .auth-container .auth-card .logo {
-    display: none !important;
-  }
-
-  body .auth-container .auth-card .logo-banner {
-    display: flex !important;
-  }
-}
-
-@media only screen and (max-width: 375px) and (max-height: 667px) and (orientation: portrait) {
-  body .auth-container .auth-card {
-    width: 100% !important;
-    height: 100vh;
-    flex-direction: column;
-    border-radius: 0px !important;
-  }
-
-  body .auth-container .auth-card .logo {
-    display: none !important;
-  }
-
-  body .auth-container .auth-card .logo-banner {
-    display: flex !important;
-  }
-}
-
-@media only screen and (max-width: 667px) and (max-height: 375px) and (orientation: landscape) {
-  body .auth-container .auth-card {
-    width: 100% !important;
-    height: 100vh;
-    flex-direction: column;
-    border-radius: 0px !important;
-  }
-
-  body .auth-container .auth-card .logo {
-    display: none !important;
-  }
-
-  body .auth-container .auth-card .logo-banner {
-    display: none !important;
-  }
-}
-
-@media only screen and (max-width: 736px) and (max-height: 414px) and (orientation: landscape) {
-  body .auth-container .auth-card {
-    width: 100% !important;
-    height: 100vh;
-    flex-direction: column;
-    border-radius: 0px !important;
-  }
-
-  body .auth-container .auth-card .logo {
-    display: none !important;
-  }
-
-  body .auth-container .auth-card .logo-banner {
-    display: none !important;
-  }
-}
-
-@media only screen and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-  body .auth-container .auth-card {
-    width: 100% !important;
-    height: 100vh;
-    flex-direction: column;
-    border-radius: 0px !important;
-  }
-
-  body .auth-container .auth-card .logo {
-    display: none !important;
-  }
-
-  body .auth-container .auth-card .logo-banner {
-    display: flex !important;
-  }
-}
-
-@media only screen and (max-width: 1024px) and (max-height: 768px) and (orientation: landscape) {
-  body .auth-container .auth-card {
-    width: 100% !important;
-    height: 100vh;
-    flex-direction: column;
-    border-radius: 0px !important;
-  }
-
-  body .auth-container .auth-card .logo {
-    display: none !important;
-  }
-
-  body .auth-container .auth-card .logo-banner {
-    display: flex !important;
-  }
 }
 
 body .admin-container {
   display: flex;
   height: 100vh;
-  background-color: #fff;
+  background-color: #eee;
 }
 
 body .admin-container .sidebar {
@@ -11393,6 +11170,11 @@ body .admin-container .sidebar .btn-sidebar li a {
   display: flex;
   align-items: center;
   background-color: #fff;
+}
+
+body .admin-container .sidebar .btn-sidebar li a .feather {
+  width: 18px;
+  height: 18px;
 }
 
 body .admin-container .sidebar .btn-sidebar li a .awesome2 {
@@ -11463,21 +11245,8 @@ body .admin-container main .header-content nav {
   justify-content: space-between;
   align-items: center;
   position: relative;
-  border-bottom: 1px solid #f3f3f3;
-}
-
-body .admin-container main .header-content nav .date-time {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-body .admin-container main .header-content nav .date-time h5 {
-  font-size: 0.9em;
-  font-weight: 500;
-  color: #3e4044;
-  margin: 0;
-  padding: 0;
+  border-radius: 0.75rem;
+  box-shadow: 0 6px 12px rgba(140, 152, 164, 0.075);
 }
 
 body .admin-container main .header-content nav .user-profile {
@@ -11599,6 +11368,7 @@ body .admin-container main .filters .filters-child button {
   margin-right: 5px;
   border-radius: 5px;
   padding: 8px 15px;
+  box-shadow: 0 6px 12px rgba(140, 152, 164, 0.075);
 }
 
 body .admin-container main .filters .filters-child button .download-icon {
@@ -11613,10 +11383,11 @@ body .admin-container main .filters .filters-child .search-group {
   margin-right: 8px;
   margin-bottom: 0 !important;
   padding: 0px 10px;
-  border-radius: 4px;
-  border: 1px solid #f3f3f3;
+  border-radius: 5px;
+  border: 1px solid transparent;
   background-color: #fff;
   display: flex;
+  box-shadow: 0 6px 12px rgba(140, 152, 164, 0.075);
 }
 
 body .admin-container main .filters .filters-child .search-group input {
@@ -11643,6 +11414,7 @@ body .admin-container main .filters .filters-child select {
   font-weight: 500;
   font-size: 0.9em;
   transition: all 0.3s ease;
+  box-shadow: 0 6px 12px rgba(140, 152, 164, 0.075);
 }
 
 body .admin-container main .filters .filters-child select:focus {
@@ -11722,7 +11494,7 @@ body .admin-container main .card-form .input-group {
 
 body .admin-container main .card-form .input-group label {
   font-size: 0.8em;
-  color: #aaa;
+  color: #555;
   font-weight: 500;
   margin-bottom: 3px;
 }
@@ -11734,12 +11506,13 @@ body .admin-container main .card-form .input-group .form-control {
   transition: all 0.3s ease;
   resize: none;
   width: 100% !important;
-  border-color: #d2d6dc !important;
+  border: 1px solid #d2d6dc !important;
+  background-color: #fff;
 }
 
 body .admin-container main .card-form .input-group .form-control:focus {
-  border: 1px solid #0e76bd;
-  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.05);
+  border: 1px solid #0e76bd !important;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.05) !important;
 }
 
 body .admin-container main .card-form .input-group .form-control-color {
@@ -11751,13 +11524,13 @@ body .admin-container main .card-form .input-group .form-control-color {
   border: none;
   background-color: #fcfcfc;
   padding: 5px;
-  border: 1px solid #d2d6dc;
+  border: 1px solid #d2d6dc !important;
+  background-color: #fff;
 }
 
 body .admin-container main .card-form .input-group .form-control-color:focus {
-  border: 1px solid #0e76bd;
-  background-color: #fff;
-  box-shadow: 0 6px 12px rgba(140, 152, 164, 0.075);
+  border: 1px solid #0e76bd !important;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.05) !important;
 }
 
 body .admin-container main .card-form .input-group .invalid-feedback strong {
@@ -11780,12 +11553,13 @@ body .admin-container main .card-form .actions {
 body .admin-container main .card-form .actions button {
   margin-right: 5px;
   border-radius: 5px;
-  font-family: "Roboto", "Poppins", "Montserrat", "Segoe UI", sans-serif;
+  font-family: "Poppins", "Montserrat", "Roboto", "Segoe UI", sans-serif;
   font-size: 0.9em;
   font-weight: 500;
   transition: all 0.4s ease;
   color: #fff;
   padding: 8px 15px;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.05);
 }
 
 body .admin-container main .card-form .actions button:last-child {
@@ -11798,7 +11572,7 @@ body .admin-container main .card-form .actions .btn-submit {
 
 body .admin-container main .btn-cart {
   border-radius: 5px;
-  font-family: "Roboto", "Poppins", "Montserrat", "Segoe UI", sans-serif;
+  font-family: "Poppins", "Montserrat", "Roboto", "Segoe UI", sans-serif;
   font-size: 0.9em;
   font-weight: 500;
   transition: all 0.4s ease;
@@ -11830,7 +11604,7 @@ body .admin-container main .search-text {
 body .admin-container main .search-text .search-bar {
   font-weight: 500;
   font-size: 0.9em;
-  font-family: "Roboto", "Poppins", "Montserrat", "Segoe UI", sans-serif;
+  font-family: "Poppins", "Montserrat", "Roboto", "Segoe UI", sans-serif;
   flex: 1;
   padding: 10px;
   outline: none;
@@ -11909,7 +11683,6 @@ body .admin-container main .modal {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: black;
   background-color: rgba(0, 0, 0, 0.4);
   /* Add Animation */
 }
@@ -11948,8 +11721,6 @@ body .admin-container main .modal .modal-content .modal-header .modal-icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
   border-radius: 50%;
   padding: 10px;
 }
@@ -11960,18 +11731,23 @@ body .admin-container main .modal .modal-content .modal-header .modal-icon .feat
 }
 
 body .admin-container main .modal .modal-content .modal-header .modal-icon-warning {
-  background-color: #ffc10711;
+  background-color: #ffc10733;
   color: #ffc107;
 }
 
 body .admin-container main .modal .modal-content .modal-header .modal-icon-error {
-  background-color: #EA203411;
+  background-color: #EA203433;
   color: #EA2034;
 }
 
 body .admin-container main .modal .modal-content .modal-header .modal-icon-info {
   color: #138496;
-  background-color: #13849611;
+  background-color: #13849633;
+}
+
+body .admin-container main .modal .modal-content .modal-header .modal-icon-success {
+  color: #00bd7d;
+  background-color: #00bd7d33;
 }
 
 body .admin-container main .modal .modal-content .modal-header .modal-body {
@@ -12058,16 +11834,12 @@ body .admin-container main .dashboard-container .dashboard-cards {
 }
 
 body .admin-container main .dashboard-container .dashboard-cards .card-name {
-  color: #909090;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 0.9em;
 }
 
 body .admin-container main .dashboard-container .dashboard-cards .reports-card {
   grid-column: 1/3;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 20px;
 }
 
 body .admin-container main .dashboard-container .dashboard-cards .reports-card .reports {
@@ -12099,31 +11871,13 @@ body .admin-container main .dashboard-container .dashboard-cards .reports-card .
   align-items: center;
   justify-content: center;
   padding: 12px;
+  color: #0e76bd;
+  background-color: #0e76bd33;
 }
 
 body .admin-container main .dashboard-container .dashboard-cards .reports-card .reports .report-record .card-icon .feather {
   height: 22px;
   width: 22px;
-}
-
-body .admin-container main .dashboard-container .dashboard-cards .reports-card .reports .report-record #sales-icon {
-  background-color: #00e39611;
-  color: #00e396;
-}
-
-body .admin-container main .dashboard-container .dashboard-cards .reports-card .reports .report-record #expenses-icon {
-  background-color: #ff456011;
-  color: #ff4560;
-}
-
-body .admin-container main .dashboard-container .dashboard-cards .reports-card .reports .report-record #order-icon {
-  background-color: #feb01911;
-  color: #feb019;
-}
-
-body .admin-container main .dashboard-container .dashboard-cards .reports-card .reports .report-record #customer-icon {
-  background-color: #775dd011;
-  color: #775dd0;
 }
 
 body .admin-container main .dashboard-container .dashboard-cards .exp-vs-sales {
@@ -12252,7 +12006,7 @@ body .admin-container main .user-content .actions {
 body .admin-container main .user-content .actions button {
   margin-right: 5px;
   border-radius: 5px;
-  font-family: "Roboto", "Poppins", "Montserrat", "Segoe UI", sans-serif;
+  font-family: "Poppins", "Montserrat", "Roboto", "Segoe UI", sans-serif;
   font-size: 0.9em;
   font-weight: 500;
   transition: all 0.4s ease;
