--- a/resources/sass/_dashboard.scss
+++ b/resources/sass/_dashboard.scss
@@ -7,23 +7,20 @@
         grid-row-gap: 20px;
 
         .card-name{
-            color: $default;
-            font-weight: 500;
+            font-weight: 600;
             font-size: .9em;
         }
 
         .reports-card{
             grid-column: 1 / 3;
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            grid-gap: 20px;
+            
 
             .reports{
-                border: .0625rem solid rgba(231,234,243,.7);
-                box-shadow: 0 6px 12px rgba(140,152,164,.075);
+                border: $border;
+                box-shadow: $shadow;
                 overflow: hidden;
                 padding: 20px;
-                border-radius: .75rem;
+                border-radius: $radius;
                 background-color: #fff;
 
                 .report-record{
@@ -45,31 +42,13 @@
                         align-items: center;
                         justify-content: center;
                         padding: 12px;
+                        color: $btn-primary;
+                        background-color: #0e76bd33;
 
                         .feather{
                             height: 22px;
                             width: 22px;
                         }
-                    }
-
-                    #sales-icon{
-                        background-color: #00e39611;
-                        color: #00e396;
-                    }
-
-                    #expenses-icon{
-                        background-color: #ff456011;
-                        color: #ff4560;   
-                    }                        
-
-                    #order-icon{
-                        background-color: #feb01911;
-                        color: #feb019;
-                    }
-
-                    #customer-icon{
-                        background-color: #775dd011;
-                        color: #775dd0;
                     }
                 }
 
