--- a/resources/sass/_filters.scss
+++ b/resources/sass/_filters.scss
@@ -14,6 +14,7 @@
             margin-right: 5px;
             border-radius: 5px;
             padding: 8px 15px;
+            box-shadow: $shadow;
 
             .download-icon{
                 margin-left: 5px;
@@ -28,10 +29,11 @@
             margin-right: 8px;
             margin-bottom: 0 !important;
             padding: 0px 10px;
-            border-radius: 4px;
-            border: 1px solid #f3f3f3;
+            border-radius: 5px;
+            border: 1px solid transparent;
             background-color: #fff;
             display: flex;
+            box-shadow: $shadow;
 
             input{
                 outline: none;
@@ -58,6 +60,7 @@
             font-weight: 500;
             font-size: .9em;
             transition: all 0.3s ease;
+            box-shadow: $shadow;
 
             &:focus{
                 border: 1px solid $btn-primary;
