--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -8,21 +8,8 @@
         justify-content: space-between;
         align-items: center;
         position: relative;
-        border-bottom: 1px solid #f3f3f3;
-
-        .date-time{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            h5{
-                font-size: .9em;
-                font-weight: 500;
-                color: $toolbar;
-                margin: 0;
-                padding: 0;
-            }
-        }
+        border-radius: $radius;
+        box-shadow: $shadow;
 
         .user-profile{
             display: flex;
