--- a/resources/sass/_modal.scss
+++ b/resources/sass/_modal.scss
@@ -5,7 +5,6 @@
 	width: 100%;
 	height: 100%;
 	overflow: auto;
-	background-color: rgb(0,0,0);
 	background-color: rgba(0,0,0,0.4);
 
 	.modal-content{
@@ -40,8 +39,6 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				width: 50px;
-				height: 50px;
 				border-radius: 50%;
 				padding: 10px;
 				
@@ -52,18 +49,23 @@
 			}
 
 			.modal-icon-warning{
-				background-color: #ffc10711;
+				background-color: #ffc10733;
 				color: #ffc107;
 			}
 
 			.modal-icon-error{
-				background-color: #EA203411;
+				background-color: #EA203433;
 				color: $red;
 			}
 
 			.modal-icon-info{
 				color: #138496;
-				background-color: #13849611;
+				background-color: #13849633;
+			}
+
+			.modal-icon-success{
+				color: #00bd7d;
+				background-color: #00bd7d33;
 			}
 
 			.modal-body{
