--- a/resources/sass/_content.scss
+++ b/resources/sass/_content.scss
@@ -27,11 +27,17 @@
 
 .btn-edit,
 .btn-remove{
-    width: 34px;
-    height: 34px;
+    width: 36px;
+    height: 36px;
     border-radius: 5px;
     color: #fff;
     padding: 0;
+
+    .feather{
+        position: relative;
+        right: 1px;
+        bottom: 2px;
+    }
 }
 
 .btn-edit{
