--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -59,7 +59,7 @@
     .profile-info{
         display: flex;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
 
         #user-name{
             color: $toolbar;
